# lyzr-pgm

./: Procfile  README copy.md  README.md  UPDATEME.yaml  WORKFLOW.yaml  agent_registry.json  enriched.json  hello_flow.py  main.py  process_hr_yaml.py  pyproject.toml  requirements.txt  test.md  test.py  test.txt
agents/: First_source.yaml  YAML_COMPOSER_MANAGER_v1.yaml  YAML_COMPOSER_ROLE_v1.yaml  use_cases.yaml  use_cases_TEMCO.yaml  use_cases_bfsi.yaml  use_cases_hr copy.yaml  use_cases_hr.yaml  use_cases_sales_marketing.yaml
app/: main.py
backend/: auth_middleware.py  main_with_auth copy 2.py  main_with_auth copy.py  main_with_auth.py  runner.py
config/: llm_config.yaml
flows/: architect_manager_flow.py  architect_manager_flow_v2.py  create_and_infer.py  create_yaml_agents.py  experimental_yaml_flow_prefect.py  orchestrate_agents.py  orchestrate_hr_use_cases.py  run_list_iterate_prefect.py  run_workflow.py  use_case_runner.py
logs/: created_agents.jsonl
lyzr_pgm.egg-info/: SOURCES.txt  entry_points.txt
scripts/: create_agent.py  create_agent_from_output.py  create_agent_from_yaml.py  create_agent_simple.py  create_from_output.py  create_manager.py  create_manager_from_yaml copy.py  create_manager_from_yaml.py  create_manager_with_roles.py  delete_all_agents.py  experimental_yaml_flow.py  list_agents.py  parse_json_to_yaml.py  run_agent.py  run_business_flow.py  run_business_yaml.py  run_hr_usecases copy.py  run_hr_usecases.py  run_inference.py  run_inference_hr.py  run_list_iterate copy.py  run_list_iterate.py  run_use_cases.py  runme.py  runme2.py  (+1 more)
(+564 files in other folders)
